--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/bootstrap": "^5.2.9",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
